--- a/templates/es-svc.yaml
+++ b/templates/es-svc.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "fullname" . }}
+  annotations:
+    {{- range $key, $value := .Values.service.annotations }}
+      {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
     component: {{ template "fullname" . }}
     role: client
@@ -14,8 +18,4 @@ spec:
   - name: http
     port: {{ .Values.service.httpPort }}
     targetPort: 9200
-    protocol: TCP
-  - name: transport
-    port: {{ .Values.service.transportPort }}
-    targetPort: 9300
     protocol: TCP
