--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ common:
     tag: 5.5.1
     pullPolicy: Always
   env:
-    CLUSTER_NAME: "myesdb"
+    CLUSTER_NAME: "elastic"
     # Uncomment this if you get the "No up-and-running site-local (private) addresses" error
     # NETWORK_HOST: "_eth0_"
 
@@ -32,8 +32,9 @@ client:
 # master and data roles.
 data:
   # This count will depend on your data and computation needs.
-  replicas: 2
+  replicas: 3
   antiAffinity: "soft"
+  storage: 12Gi
   env:
     NODE_DATA: "true"
     NODE_MASTER: "false"
@@ -61,17 +62,8 @@ master:
     # and one dies, the cluster still works.
     NUMBER_OF_MASTERS: "2"
 
-curator:
-  schedule: "0 1 * * *"
-  # Allows modification of the default age-based filter. If you require more
-  # sophisticated filtering, modify the action file specified in
-  # templates/es-curator-config.yaml.
-  age:
-    timestring: "%Y.%m.%d"
-    unit: "days"
-    unit_count: 3
-
 service:
+  annotations: {}
   type: LoadBalancer
   httpPort: 9200
   transportPort: 9300
